alignmnet fixed

--- a/Club Cafe/home.css
+++ b/Club Cafe/home.css
@@ -83,7 +83,6 @@ main {
   position: relative;
   text-align: center;
   gap: 20px;
-  top: 10vw;
   box-shadow: rgba(0, 0, 0, 0.299) 0 0 10px 1px;
 }
 #welcome-section {
